# snippets

./: README.md
DSP/: no_task0.m  octave-workspace  read_signal.m  task1.m  task3.m  task4.m
DSP/data/: Sa16.tx  X.graph  Y1.graph  pic6.graph
DSP/doc/: report.aux  report.tex
aho_corasick/: CMakeLists.txt  main.cpp
aho_corasick/src/: aho_corasick.cpp  aho_corasick.h
calc_pi/: main.c
ecosystemtask/: CMakeLists.txt  README.md  events.cpp  model.h  parse.cpp
erptask/: README.md  bank.cpp  bank.h  bankDocument.cpp  company.h  datetime.cpp  datetime.h  document.cpp  warehouseDocument.h
frequencies/: .gitignore  CMakeLists.txt  README.md  counter.cpp  counter.h  dictionary.cpp  dictionary.h  main.cpp  makefile  tests.cpp
frequencies/tests/: test1.txt  test2.txt  test3.txt
jsonc-test/: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
mpi/fluid/: CMakeLists.txt  build.py  config.py  display.py  main.c  makefile
mpi/gravity/: main.cpp  new_display.py
mpi/matrix_multiplication_5/: CMakeLists.txt  main.c
reed-solomon-decoder/: CMakeLists.txt
reed-solomon-decoder/include/: Channel.hpp  Reciever.hpp
reed-solomon-decoder/src/: ReedSolomonCode.cpp
sorting/: main.cpp  mpi_main.c  report.tex
sorting/data/: mpi_sort k=1.data  (+15 more)
statistics_task/: README.md  makefile
university/erptask/: CMakeLists.txt  bankDocument.h  company.cpp  document.h  main.cpp  parser.cpp  parser.h  warehouseDocument.cpp
university/erptask/tests/input/: 1.txt  10.txt  2.txt  5.txt  6.txt  7.txt  8.txt  9.txt
university/erptask/tests/output/: 3.txt  5.txt  8.txt  9.txt
(+102 files in other folders)
